Removed tyrian refs.

--- a/index.html
+++ b/index.html
@@ -25,6 +25,6 @@
                 
             </canvas>
         </div>
-        <script data-main="game" src="js/tyrian.js"></script>
+        <script data-main="game" src="js/mygame.js"></script>
     </body>
 </html>
